--- a/Bot.cfg
+++ b/Bot.cfg
@@ -3,10 +3,10 @@
 looks_config = ./appearance.cfg
 
 # Path to python file. Can use relative path from here.
-python_file = ./main.py
+python_file = ./Dadbot.py
 
 # Name of the bot in-game
-name = SQ Bot
+name = Dadbot
 
 maximum_tick_rate_preference = 120
 
